--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.24.0",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
@@ -33,7 +36,10 @@
     "react-native-screens": "^3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
